CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0003 NEW)

FUNCTION (PREPEND_INCLUDE_DIRECTORY tgt dir)
    GET_PROPERTY(inc TARGET ${tgt} PROPERTY INCLUDE_DIRECTORIES)
    SET_PROPERTY(TARGET ${tgt} PROPERTY INCLUDE_DIRECTORIES ${dir} ${inc})
ENDFUNCTION (PREPEND_INCLUDE_DIRECTORY)

PROJECT(hoppang C)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(OpenSSL)

SET(WITH_BUNDLED_SSL_DEFAULT "ON")
IF ((NOT UNIX) OR CYGWIN)
    SET(WITH_BUNDLED_SSL_DEFAULT "OFF")
ENDIF ((NOT UNIX) OR CYGWIN)
STRING(REGEX MATCH "^(amd64|AMD64|x86_64|x86||i[3456]86)$" PROC_MATCH ${CMAKE_SYSTEM_PROCESSOR})
IF (NOT PROC_MATCH)
    MESSAGE("target processor ${CMAKE_SYSTEM_PROCESSOR} is not x86")
    SET(WITH_BUNDLED_SSL_DEFAULT "OFF")
ENDIF (NOT PROC_MATCH)
IF (OPENSSL_FOUND AND NOT (OPENSSL_VERSION VERSION_LESS "1.0.2"))
    SET(WITH_BUNDLED_SSL_DEFAULT "OFF")
ENDIF (OPENSSL_FOUND AND NOT (OPENSSL_VERSION VERSION_LESS "1.0.2"))

OPTION(BUILD_SHARED_LIBS "whether to build a shared library" OFF)

SET(CMAKE_C_FLAGS "-O2 -g -Wall -Wno-unused-function ${CMAKE_C_FLAGS} -DINSTALL_ROOT=\"\\\"${CMAKE_INSTALL_PREFIX}\\\"\"")

INCLUDE_DIRECTORIES(
    include
    )


SET(LIB_SOURCE_FILES
)	

SET(EXTRA_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})

ADD_EXECUTABLE(hoppang
    ${LIB_SOURCE_FILES}
    src/main.c)
IF (OPENSSL_FOUND)
    PREPEND_INCLUDE_DIRECTORY(hoppang ${OPENSSL_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(hoppang ${OPENSSL_LIBRARIES})
ENDIF (OPENSSL_FOUND)

TARGET_LINK_LIBRARIES(hoppang ${EXTRA_LIBRARIES})
INSTALL(TARGETS hoppang
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib)

INSTALL(DIRECTORY include/ DESTINATION include FILES_MATCHING PATTERN "*.h")

INSTALL(PROGRAMS share/hoppang/annotate-backtrace-symbols DESTINATION share/hoppang)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/hoppang PATTERN "Makefile" EXCLUDE PATTERN "README.md" EXCLUDE)
